--- a/idoven_app/pyproject.toml
+++ b/idoven_app/pyproject.toml
@@ -10,6 +10,8 @@ python = "^3.11"
 fastapi = "^0.109.0"
 uvicorn = {extras = ["standard"], version = "^0.25.0"}
 
+[tool.poetry.group.test.dependencies]
+pytest = "^7.4.4"
 
 [build-system]
 requires = ["poetry-core"]
