--- a/idoven_app/pyproject.toml
+++ b/idoven_app/pyproject.toml
@@ -9,10 +9,17 @@ readme = "README.md"
 python = "^3.11"
 fastapi = "^0.109.0"
 uvicorn = {extras = ["standard"], version = "^0.25.0"}
+pymongo = "^4.6.1"
+motor = "^3.3.2"
 
 [tool.poetry.group.test.dependencies]
 pytest = "^7.4.4"
+pytest-asyncio = "^0.23.3"
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.pytest.ini_options]
+asyncio_mode = "auto"
+testpaths = ["tests"]
