--- a/idoven_app/pyproject.toml
+++ b/idoven_app/pyproject.toml
@@ -11,6 +11,8 @@ fastapi = "^0.109.0"
 uvicorn = {extras = ["standard"], version = "^0.25.0"}
 pymongo = "^4.6.1"
 motor = "^3.3.2"
+pydantic-settings = "^2.1.0"
+python-dotenv = "^1.0.0"
 
 [tool.poetry.group.test.dependencies]
 pytest = "^7.4.4"
