--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ pydantic-settings = "^2.1.0"
 python-dotenv = "^1.0.0"
 pytest = "^7.4.4"
 pytest-asyncio = "^0.23.3"
+httpx = "^0.26.0"
 
 [build-system]
 requires = ["poetry-core"]
