--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,9 @@ python-dotenv = "^1.0.0"
 pytest = "^7.4.4"
 pytest-asyncio = "^0.23.3"
 httpx = "^0.26.0"
+python-jose = "^3.3.0"
+python-multipart = "^0.0.6"
+passlib = "^1.7.4"
 
 [build-system]
 requires = ["poetry-core"]
