--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ httpx = "^0.26.0"
 python-jose = "^3.3.0"
 python-multipart = "^0.0.6"
 passlib = "^1.7.4"
+psycopg = {version="3.1.12", extras=["binary", "pool"]}
 
 [build-system]
 requires = ["poetry-core"]
