--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,3 +28,6 @@ build-backend = "poetry.core.masonry.api"
 [tool.pytest.ini_options]
 asyncio_mode = "auto"
 testpaths = ["tests"]
+filterwarnings = [
+    "ignore::DeprecationWarning"
+]
