--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,13 +13,16 @@ pymongo = "^4.6.1"
 motor = "^3.3.2"
 pydantic-settings = "^2.1.0"
 python-dotenv = "^1.0.0"
-pytest = "^7.4.4"
-pytest-asyncio = "^0.23.3"
 httpx = "^0.26.0"
 python-jose = "^3.3.0"
 python-multipart = "^0.0.6"
 passlib = "^1.7.4"
 psycopg = {version="3.1.12", extras=["binary", "pool"]}
+
+[tool.poetry.dev-dependencies]
+pytest = "^7.4.4"
+pytest-asyncio = "^0.23.3"
+
 
 [build-system]
 requires = ["poetry-core"]
